fix(reboot): add html min-width and normalize text wrapping

--- a/source/sass/global/reboot.scss
+++ b/source/sass/global/reboot.scss
@@ -11,6 +11,7 @@ body {
   margin: 0;
   padding: 0;
   min-height: 100vh;
+  min-width: 320px;
 }
 
 html {
@@ -33,7 +34,7 @@ html {
 body {
   width: 100%;
   height: 100%;
-
+  overflow-wrap: break-word;
   background-color: $color-default-white;
 }
 
